# HtmlGrapheasTestApp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  build.gradle  build_Linux_with_config.sh  build_Windows_Debug.cmd  build_Windows_MSVC_with_config.cmd  build_Windows_Release.cmd  build_Windows_with_config.cmd  gradle.properties  settings.gradle
cmake/libcmaker/: build_agg.cmake  build_dirent.cmake  build_expat.cmake  build_fontconfig.cmake  build_freetype_with_harfbuzz.cmake  build_googletest.cmake  build_icu.cmake  build_icu_host_tools.cmake  build_stlcache.cmake  build_wxwidgets.cmake
gradle/wrapper/: gradle-wrapper.properties
host_tools/: CMakeLists.txt
platform/Android/HtmlGrapheasApp/: build.gradle
platform/Android/HtmlGrapheasApp/src/androidTest/java/ru/feographia/htmlgrapheasapp/: ExampleInstrumentedTest.java
platform/Android/HtmlGrapheasApp/src/main/: AndroidManifest.xml
platform/Android/HtmlGrapheasApp/src/main/java/ru/feographia/htmlgrapheasapp/: MainActivity.java
platform/Android/HtmlGrapheasApp/src/main/res/layout/: activity_main.xml
platform/Android/HtmlGrapheasApp/src/test/java/ru/feographia/htmlgrapheasapp/: ExampleUnitTest.java
platform/Android/HtmlGrapheasStasi/: build.gradle
platform/Android/HtmlGrapheasStasi/src/androidTest/java/ru/feographia/htmlgrapheasappandroid/: ExampleInstrumentedTest.java
platform/Android/HtmlGrapheasStasi/src/androidTest/java/ru/feographia/htmlgrapheasstasi/: ExampleInstrumentedTest.java
platform/Android/HtmlGrapheasStasi/src/main/: AndroidManifest.xml
platform/Android/HtmlGrapheasStasi/src/main/java/ru/feographia/htmlgrapheasappandroid/: MainActivity.java
platform/Android/HtmlGrapheasStasi/src/main/java/ru/feographia/htmlgrapheasstasi/: MainActivity.java
platform/Android/HtmlGrapheasStasi/src/main/res/layout/: activity_main.xml
platform/Android/HtmlGrapheasStasi/src/test/java/ru/feographia/htmlgrapheasappandroid/: ExampleUnitTest.java
platform/Android/HtmlGrapheasStasi/src/test/java/ru/feographia/htmlgrapheasstasi/: ExampleUnitTest.java
platform/Android/app/: build.gradle  proguard-rules.pro
platform/Android/app/src/androidTest/java/ru/feographia/htmlgrapheasappandroid/: ExampleInstrumentedTest.java
platform/Android/app/src/main/: AndroidManifest.xml
platform/Android/app/src/main/java/ru/feographia/htmlgrapheasappandroid/: MainActivity.java
platform/Android/app/src/main/res/drawable/: ic_launcher_background.xml
platform/Android/app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
platform/Android/app/src/main/res/layout/: activity_main.xml
platform/Android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
platform/Android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
platform/Android/app/src/test/java/ru/feographia/htmlgrapheasappandroid/: ExampleUnitTest.java
platform/android/HtmlGrapheasApp/: build.gradle
platform/android/HtmlGrapheasApp/src/main/java/ru/htmlgrapheas/htmlgrapheasapp/: MainActivity.java
platform/android/HtmlGrapheasApp/src/main/res/layout/: activity_main.xml
platform/wxWidgets/: CMakeLists.txt
platform/wxWidgets/cmake/: build_wxwidgets.cmake
platform/wxWidgets/src/hga/: main.cpp
platform/wxWidgets/src/hgapp/: main.cpp
platform/wxWidgets/src/wx_examples/: wx_ex_hello_world.cpp  wx_ex_scrolled_window.cpp
platform/wxwidgets/: CMakeLists.txt
platform/wxwidgets/src/hgapp/: main.cpp
src/: wx_ex_hello_world.cpp
src/hga/: HgaWindow.cpp  HgaWindow.h  agg_freetype_harfbuzz.c  agg_freetype_harfbuzz.h  main.cpp
src/wxAGG/: AGGWindow.cpp  AGGWindow.h  LionWindow.cpp  LionWindow.h  PixelFormatConvertor.h  main.cpp  parse_lion.cpp
src/wx_examples/: wx_ex_basic_draw_pane.cpp  wx_ex_custom_button.cpp
